API downtime: GET list downtimes
